# ai-investment-copilot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.superpowers/brainstorm/1763-1781918187/content/: architecture-stages-v2.html  architecture-stages.html  first-principles-architecture-v3.html  first-principles-architecture-v4.html  homepage-holdings-options.html  minimalist-first-principles-v5.html  waiting-alignment-2.html  waiting-alignment.html
.superpowers/brainstorm/1763-1781918187/state/: server-stopped
data/fixtures/: mock_news.json
data/output/: daily_digest.md
docs/: CONTEXT.md
src/: main.py
src/ai_investment_copilot/: __init__.py  build_digest.py  discord_delivery.py  main.py  market_data.py  news_ingest.py  ranker.py  yfinance_config.py
src/ai_investment_copilot/models/: __init__.py  news.py
tests/: test_build_digest.py  test_main.py  test_market_data.py  test_news_ingest.py  test_news_item.py  test_ranker.py
