[project]
name = "ai-investment-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Peng Lin", email = "linpeng2027@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
    "yfinance>=1.4.1",
]

[project.scripts]
ai-investment-copilot = "ai_investment_copilot:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
